# glean-mcp-exercise

./: .env.example  .gitignore  DESIGN.md  README.md  TROUBLESHOOTING.md  pyproject.toml
data/documents/: DESIGN.md  TROUBLESHOOTING.md  api_rate_limits.md  benefits_guide.md  engineering_onboarding.md  hr_pto_policy.md  incident_response_runbook.md  product_roadmap_2025.md  remote_work_policy.md  security_policy.md
scripts/: chat_ui.py  test_pipeline.py
src/glean_chatbot/: __init__.py  chat.py  config.py  indexer.py  mcp_server.py  models.py  search.py
submissions/: DESIGN.md
tests/: test_indexer.py  test_mcp_server.py  test_search.py
