[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "glean-rag-chatbot"
version = "0.1.0"
description = "RAG-based enterprise chatbot using Glean APIs exposed as an MCP tool"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "mcp>=1.3.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.7.0",
    "tenacity>=8.3.0",
]

[project.scripts]
glean-index = "glean_chatbot.indexer:main"
glean-mcp = "glean_chatbot.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/glean_chatbot"]

[tool.hatch.envs.default]
installer = "pip"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
